created the references file

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -17,9 +17,9 @@
 		\hspace*{0.05\textwidth}
 		\parbox[b]{0.75\textwidth}{
 			
-			{\noindent\LARGE\bfseries Applied Machine Learning & Predictive Modelling I: Modelling Stroke Data\\}\\[2\baselineskip]
+			{\noindent\LARGE\bfseries Applied Machine Learning and Predictive Modelling I: Modelling Stroke Data\\}\\[2\baselineskip]
 			{\large \textbf{Authors:} Larissa Eisele, Fabian Lüthard, Yves Maillard} \\[0.5\baselineskip]
-			{\large \textbf{Module:}   Applied Machine Learning & Predictive Modelling I} \\[4\baselineskip]
+			{\large \textbf{Module:}   Applied Machine Learning and Predictive Modelling I} \\[4\baselineskip]
 			{\large Submitted on 10th of June, 2022 } \\[1\baselineskip]
 			{\large \textsc{ Supervisor: Matteo Tanadini and Daniel Meister }}
 			
