--- a/sioux_mach_learn_project.Rmd
+++ b/sioux_mach_learn_project.Rmd
@@ -51,10 +51,12 @@ package.check <- lapply(packages, FUN = function(x) {
 
 
 # Importing Data
+````{r raw_data_view}
+stroke_data <- read_csv('./data/healthcare-dataset-stroke-data.csv')
 
+stroke_data
 
-
-
+````
 # Methodology
 
 
