--- a/sioux_mach_learn_project.Rmd
+++ b/sioux_mach_learn_project.Rmd
@@ -57,6 +57,12 @@ stroke_data <- read_csv('./data/healthcare-dataset-stroke-data.csv')
 stroke_data
 
 ````
+
+```{r}
+#testing the effect of non smokers and smokers
+boxplot(stroke ~ smoking_status, data =)
+```
+
 # Methodology
 
 
