assign_variable_count_by_smoke

--- a/sioux_mach_learn_project.Rmd
+++ b/sioux_mach_learn_project.Rmd
@@ -63,7 +63,7 @@ stroke_data
 
 ```{r}
 #testing the effect of non smokers and smokers
-stroke_data %>% 
+count_by_smoke_status <- stroke_data %>% 
   select(smoking_status, stroke) %>%
   group_by(smoking_status, stroke) %>%
   summarise( N = n())
