--- a/sioux_mach_learn_project.Rmd
+++ b/sioux_mach_learn_project.Rmd
@@ -69,6 +69,10 @@ count_by_smoke_status <- stroke_data %>%
   summarise( N = n())
 
 ```
+```{r}
+#boxplot testing the effect of non smokers and smokers
+boxplot(N  ~ stroke + smoking_status, data = count_by_smoke_status)
+```
 
 # Methodology
 
