--- a/sioux_mach_learn_project.Rmd
+++ b/sioux_mach_learn_project.Rmd
@@ -84,6 +84,17 @@ count_by_smoke_status <- stroke_data %>%
 
 ## Scatterplots
 ```{r scatterplots}
+stroke_data %>% 
+  ggplot(mapping = aes(x = bmi, y = age, color = stroke)) +
+  geom_point() +
+  geom_smooth()
+
+stroke_data %>% 
+  filter(stroke == 1) %>%
+  ggplot(mapping = aes(x = bmi, y = age, color = smoking_status)) +
+  geom_point(method = 'lm') +
+  geom_smooth(method = 'lm')
+
 
 ```
 
