--- a/sioux_mach_learn_project.Rmd
+++ b/sioux_mach_learn_project.Rmd
@@ -58,6 +58,7 @@ We hope that our feature can prevent serious health issues and motivate our user
 stroke_data <- read_csv('./data/healthcare-dataset-stroke-data.csv')
 stroke_data$bmi <- as.numeric(stroke_data$bmi)
 stroke_data$bmi[is.na(stroke_data$bmi)] <- mean(stroke_data$bmi, na.rm = TRUE)
+stroke_data$stroke <- as.factor(stroke_data$stroke)
 
 stroke_data
 
@@ -153,11 +154,12 @@ ggplot(stroke_data, aes(y = age)) +
 
 ```{r}
 stroke_by_age <- stroke_data %>%
- dplyr::filter(stroke == 1) %>%
- ggplot(aes(x = age,
-            y = stroke)) +
- geom_boxplot()
+# dplyr::filter(stroke == 1) %>%
+ ggplot(aes(x = stroke,
+            y = age)) +
+  geom_boxplot()
 
+stroke_by_age
 ```
 
 
