--- a/sioux_mach_learn_project.Rmd
+++ b/sioux_mach_learn_project.Rmd
@@ -136,6 +136,16 @@ stroke_data %>%
   geom_point(method = 'lm') +
   geom_smooth(method = 'lm')
 
+stroke_data %>% 
+  ggplot(mapping = aes(x = bmi, y = avg_glucose_level, color = stroke)) +
+  geom_point() +
+  geom_smooth(method = 'lm')
+
+stroke_data %>% 
+  filter(stroke == 1) %>%
+  ggplot(mapping = aes(x = bmi, y = avg_glucose_level, color = stroke)) +
+  geom_point(method = 'lm') +
+  geom_smooth(method = 'lm')
 ```
 
 ## Boxplots
