--- a/sioux_mach_learn_project.Rmd
+++ b/sioux_mach_learn_project.Rmd
@@ -59,6 +59,13 @@ stroke_data <- read_csv('./data/healthcare-dataset-stroke-data.csv')
 stroke_data$bmi <- as.numeric(stroke_data$bmi)
 stroke_data$bmi[is.na(stroke_data$bmi)] <- mean(stroke_data$bmi, na.rm = TRUE)
 stroke_data$stroke <- as.factor(stroke_data$stroke)
+stroke_data$age <- as.integer(stroke_data$age)
+stoke_data$smoking_status <- as.factor(stroke_data$smoking_status)
+stroke_data$work_type <- as.factor(stroke_data$work_type)
+stroke_data$gender <- as.factor(stroke_data$gender)
+stroke_data$ever_married <- as.factor(stroke_data$ever_married)
+stroke_data$Residence_type <- as.factor(stroke_data$Residence_type)
+
 
 stroke_data
 
@@ -234,6 +241,14 @@ library(ggplot2)
 
 
 # Generalised Linear Model with family set to Poisson
+
+```{r}
+glm.stroke <- glm(age ~ smoking_status,
+family = "poisson",
+data = stroke_data)
+summary(glm.stroke)
+```
+
 
 # Generalised Linear Model with family set to Binomial
 
